<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopp</string>
    <string name="action_settings">Settings</string>
    <string name="shopp">凡客书城</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="search">搜索</string>
    <string name="him">请输入关键字</string>
    <string name="userlogin">用户登录</string>
    <string name="username">用 户 名 :</string>
    <string name="password">密     码:</string>
    <string name="user_register">用户注册</string>
    <string name="age">年       龄 :</string>
    <string name="sex">性     别 :</string>
    <string name="address">地     址 :</string>
    <string name="email">邮    箱：</string>
    <string name="again_password">重新输入密码</string>
    <string name="man">男</string>
    <string name="weman">女</string>
    <string name="bookpar">图书详细信息</string>
    <string name="book_name">书  名:</string>
    <string name="author">作  者:</string>
    <string name="price">单  价:</string>
    <string name="stock">库  存:</string>
    <string name="electron">购买电子版</string>
    <string name="entity_book">购买实体书</string>
    <string name="break_frist">返 回</string>
    <string name="book_intro">图书简介</string>
    <string name="shopp_car">购物车</string>
    <string name="again_in">重填</string>
    <string name="ele_num">电子书数量</string>
    <string name="eleprice">电子书单价</string>
    <string name="ent_num">实体书数量</string>
    <string name="userinfo">个人信息</string>

</resources>
