<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/userinfo"
        android:textSize="36dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
                            android:textSize="24sp"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/userinfo_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
                            android:textSize="24sp"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/userinfo_password"
            android:password="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    
         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
                            android:textSize="24sp"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/again_password" />

        <EditText
            android:id="@+id/userinfo_again_password"
            android:password="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
      
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    <RadioGroup
        android:id="@+id/userinfo_sexgroup"
         android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >
         
        <TextView
                            android:textSize="24sp"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex" />
        <RadioButton 
            android:id="@+id/userinfo_man"
            android:layout_marginLeft="50dp"
              android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man" 
            />
        
         <RadioButton 
                 android:id="@+id/userinfo_weman"
              android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weman" 
            />
    </RadioGroup>
    
    
        </LinearLayout>
        
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
                            android:textSize="24sp"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <EditText
            android:id="@+id/userinfo_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
      
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
                            android:textSize="24sp"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/userinfo_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    
    
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/userinfo_break_frist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/break_frist" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="保存" />
        <Button
            android:id="@+id/mycar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="我的购物车" />
    </LinearLayout>

    
    

</LinearLayout>
