<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/shopp"
        android:textSize="36dp"
         android:gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         >
  <Button
         android:id="@+id/main_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:id="@+id/main_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register" />
        
        
    
    <AutoCompleteTextView 
        android:id="@+id/search"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/him"
        
        />
    
    <Button
        android:id="@+id/main_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search" />
       
    <Button
        android:id="@+id/userinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="个人信息" />
    </LinearLayout>
    
    
    
   <GridView
       android:id="@+id/gridview"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:numColumns="3"
       android:columnWidth="80dp"
       android:verticalSpacing="5dp"
       android:horizontalSpacing="10dip"
        >
       
       
   </GridView>

    
    
</LinearLayout>
