<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/book_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="请选择购买图书类型"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/elebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="电子版"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ele_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="单价"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/entitybook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="实体书"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ent_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="单价"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ele_num"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/ele_num"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ent_num"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/ent_num"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/amount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="100dp"
        android:text="总计_0元"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/pay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="确认付款" />

        <Button
            android:id="@+id/break_pre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingLeft="0dp"
            android:text="@string/break_frist" />
    </LinearLayout>

</LinearLayout>